[build-system]
requires = ["setuptools>=40.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lightinsighter"
authors = [
    {name = "lightinsighter", email = "lightinsighter@outlook.com"},
]
description = "A collection of useful notes and tools in our daily work and personal life."
readme = "README.md"
requires-python = ">=3.8"
keywords = ["Python"]
license = {text = "MIT"}
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Intended Audience :: Education",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dynamic = ["version", "dependencies"]

[project.optional-dependencies]
docs = ["mkdocstrings[python]>=0.18", "mkdocs-material", "markdown-exec", "mkdocs-gen-files", "mkdocs-coverage"]
fastapi = ["fastapi>=0.103.1"]
webui = ["gradio<=3.50.2", "gradio_client<=0.6.1"]
all = ["lightinsighter[docs,fastapi,webui]"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "lightinsighter.VERSION"}
dependencies = {file = "requirements.txt"}
